<resources>
    <string name="app_name">VoicesCapstone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="first_time_user">First time user</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title">TITLE</string>
    <string name="settings">Settings</string>
    <string name="settings_prompt">Thank you for joining our Voices community, where your voice is heard. Please personalize your photo by clicking above and add a brief description about yourself below. Thank you, and enjoy!</string>
    <string name="about_me_input">Enter About Me</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="post">Post</string>
    <string name="created">Created</string>
    <string name="username">USERNAME</string>
    <string name="about_me">About Me</string>
</resources>
