<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="10dp">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_above="@+id/profile_image_choice"
            android:text="@string/settings"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/profile_image_choice"
            android:textSize="65sp"
            android:textStyle="normal" />


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_choice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/settings"
        android:layout_marginStart="8dp"
        android:src="@drawable/linda"
        android:textAlignment="center"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings"
        app:layout_constraintBottom_toTopOf="@+id/settings_prompt"
        app:layout_constraintTop_toBottomOf="@+id/settings" />
    <TextView
        android:id="@+id/settings_prompt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/settings_prompt"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="129dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/colorAccent"
        android:hint="Name"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_prompt" />

    <EditText
        android:id="@+id/settings_about_me"
        android:layout_width="161dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintLeft_toLeftOf="@+id/name_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_edit_text"
        app:layout_constraintTop_toTopOf="@+id/settings_prompt"
        android:textSize="16sp"
        android:hint="@string/about_me"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintVertical_bias="0.391" />

    <ImageButton
        android:id="@+id/settings_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_about_me" />

    <android.support.design.widget.BottomNavigationView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:itemIconTint="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_bottom_tabs" />

</android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>